# serializer version: 1
# name: test_all_entities
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'button.pool_clear_error_messages',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Clear Error Messages',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Clear Error Messages',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'escape',
      'unique_id': '1234567890_mbf_escape',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'button',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'button.pool_reset_cell_runtime_counter',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Reset cell runtime counter',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Reset cell runtime counter',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'reset_cell_partial',
      'unique_id': '1234567890_reset_cell_partial',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': None,
      'entity_id': 'button.pool_start_backwash',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Start Backwash',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Start Backwash',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'backwash',
      'unique_id': '1234567890_backwash',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'button.pool_synchronize_device_time',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Synchronize Device Time',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Synchronize Device Time',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'sync_time',
      'unique_id': '1234567890_sync_time',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_setup_when_modules_absent
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'button.pool_clear_error_messages',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Clear Error Messages',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Clear Error Messages',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'escape',
      'unique_id': '1234567890_mbf_escape',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'button.pool_synchronize_device_time',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Synchronize Device Time',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Synchronize Device Time',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'sync_time',
      'unique_id': '1234567890_sync_time',
      'unit_of_measurement': None,
    }),
  ])
# ---
